# -nomadcoder-Python-AirBNB-Clone

./: README.md  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0003_house_category.py  0004_remove_house_category.py  0005_alter_house_owner.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py  0003_alter_photo_file_alter_video_file.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience.py  0003_alter_review_room_alter_review_user.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_rename_rooms_room.py  0003_room_name_alter_amenity_description.py  0004_room_category.py  (+1 more)
users/: admin.py  models.py  serializers.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+8 files in other folders)
