[tool.poetry]
name = "python airbnb"
version = "0.1.0"
description = ""
authors = ["hanihoneykim <haeehani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
black = "^22.10.0"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
